samples/_failures_safe/1761499806_dbc0b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2261166.c: In function ‘main’:
./samples/SAFE/__tmp_b2261166.c:154:12: error: missing terminating " character
  154 |     printf("\nMatrix Addition
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b2261166.c:154:5: error: expected expression at end of input
  154 |     printf("\nMatrix Addition
      |     ^~~~~~
./samples/SAFE/__tmp_b2261166.c:154:5: error: expected declaration or statement at end of input
